2006-02-08  Brian Kahne  <bkahne@freescale.com>

	* Removed trailing whitespace from shbang lines to avoid an
	issue with running them under Cygwin.

        ====== plasma release 0.8.23 (v0_8_23) on Linux (cde-tx32-ldt189) ======

2006-01-05  Brian Kahne  <bkahne@freescale.com>

	* Fixed a bug with parsing long strings: We didn't handle the case
	where we received a null character, indicating that we had a badly
	formed string (had run to the end of the buffer w/o finding the
	terminator).  This meant that we ended up in an infinite loop.
	Fixed this and added tests/parsing/in7.C to verify this.

        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

2005-11-09  Brian Kahne  <bkahne@freescale.com>

	* Removed references to Somerset and FIL from documentation.

	* Modified the documentation and configure/Makefile stuff so that
	we print an URL location that's specified using a command-line
	option (--web-url).

        ====== plasma release 0.8.21 (v0_8_21) on Linux (cde-tx32-ldt189) ======

2005-11-02  Brian Kahne  <bkahne@freescale.com>

	* Added copy-right notices to all C++/Plasma files.  Created a
	script called "add-copyright" that tries to do this in an
	intelligent fashion.

        ====== plasma release 0.8.20 (v0_8_20) on Linux (cde-tx32-ldt189) ======


2005-05-26  Brian Kahne  <bkahne@freescale.com>

	* If configure finds that the path to the compiler is a link, it
	tries to follow it.

	* Modified plasma.in so that the contents of an autoconf variable
	CONFOPTS will be added to cpp and gcc options when plasma is run.

	* Modified configure.ac so that if you configure on an IA32
	machine, -m32 is added to CONFOPTS.  The idea is that we want
	32-bit code generated even on an Opteron if Plasma is built on an
	IA32 machine.

        ====== plasma release 0.8.19 (v0_8_19) on Linux (cde-tx32-ldt189) ======
